--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -18004,10 +18004,10 @@ Ulefone:
 
 # UMIDIGI or UMI
 UMIDIGI:
-  regex: 'UMI(?:DIGI)?[ _]|(?:A5_Pro|A7 Pro|ROME[_ ]X|BISON|hammer_S|S2 LITE|London|Z2_PRO|C NOTE 2|A11 Pro Max|Power 3|Android 10.+ (?:A3[SX]|A7S))(?:[;/) ]|$)'
+  regex: 'UMI(?:DIGI)?[ _]|(?:A[579][_ ]Pro|ROME[_ ]X|BISON|hammer_S|S2 LITE|London|Z2_PRO|C NOTE 2|A11 Pro Max|Power 3|Android 10.+ (?:A3[SX]|A7S))(?:[;/) ]|$)'
   device: 'smartphone'
   models:
-    - regex: '(A[57]|Z2)[_ ]Pro'
+    - regex: '(A[579]|Z2)[_ ]Pro'
       model: '$1 Pro'
     - regex: 'A11 Pro Max'
       model: 'A11 Pro Max'
