--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -10708,3 +10708,21 @@
     model: Y72 5G
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 11; V2054; wv) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/62.0.3202.84 Mobile Safari/537.36 VivoBrowser/6.9.16.6
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: vivo Browser
+    version: 6.9.16.6
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Vivo
+    model: Y20A
+  os_family: Android
+  browser_family: Unknown
