--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -23451,13 +23451,15 @@ Reach:
 
 # MobiWire
 MobiWire:
-  regex: '(?:Kiona|KANUNA|Halona|Kicka[_ ][45][ _]Plus|Kohana|Kosumi|KWANITA|Lonan|Hotah|Kicka 5|Kiona)(?:[);/ ]|$)'
+  regex: '(?:Kiona|KANUNA|Halona|Kicka[_ ][45][ _]Plus|Kohana|Kosumi|KWANITA|Lonan|Hotah|Kicka 5|Kiona|SmartE11)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'KANUNA'
       model: 'Kanuna'
     - regex: 'KWANITA'
       model: 'Kwanita'
+    - regex: 'SmartE11'
+      model: 'Smart E11'
     - regex: '(Kiona|Kicka[_ ][45][ _]Plus|Kohana|Kosumi|Lonan|Halona|Hotah|Kicka 5|Kiona)(?:[);/ ]|$)'
       model: '$1'
 
