--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1261,11 +1261,17 @@
   version: ''
 
 # Opera GX (https://www.opera.com/gx#start | http://ftp.opera.com/pub/opera_gx/)
-- regex: 'OP(?:RG)?X(?:/(\d+[\.\d]+))?'
+- regex: 'Chrome/.+ OP(?:RG)?X(?:/(\d+[\.\d]+))?'
   name: 'Opera GX'
   version: '$1'
   engine:
     default: 'Blink'
+
+- regex: 'OP(?:RG)?X(?:/(\d+[\.\d]+))?'
+  name: 'Opera GX'
+  version: '$1'
+  engine:
+    default: 'WebKit'
 
 #Opera
 - regex: '(?:Opera Tablet.*Version|Opera/.+Opera Mobi.+Version|Mobile.+OPR)/(\d+[\.\d]+)'
