--- a/Tests/fixtures/portable_media_player.yml
+++ b/Tests/fixtures/portable_media_player.yml
@@ -557,3 +557,21 @@
     model: iPod Touch 4
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 7.0; FiiO M15 Build/NRD90M)
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: portable media player
+    brand: FiiO
+    model: M15
+  os_family: Android
+  browser_family: Android Browser
