--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -18248,7 +18248,7 @@ Venso:
 
 # Verizon
 Verizon:
-  regex: 'QTA(SUN[12]|XIA1|QZ3|QZ3KID|IR7)|QMV7B'
+  regex: 'QTA(SUN[12]|XIA1|QZ3|QZ3KID|IR7)|QMV7[AB]'
   device: 'tablet'
   models:
     - regex: 'QTAXIA1|QTAIR7'
@@ -18261,7 +18261,7 @@ Verizon:
       model: 'Ellipsis Kids LTE'
     - regex: 'QTAQZ3'
       model: 'Ellipsis 8'
-    - regex: 'QMV7B'
+    - regex: 'QMV7[AB]'
       model: 'Ellipsis 7'
 
 # Verykool
