--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2807,3 +2807,11 @@
     version: ""
     platform: x86
     family: Windows
+-
+  user_agent: Deezer/8.51.0.5 (iOS; 14.4.2; Mobile; en; iPhone10_4)
+  os:
+    name: iOS
+    short_name: IOS
+    version: 14.4.2
+    platform: ""
+    family: iOS
