--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -4889,7 +4889,7 @@
   device:
     type: tablet
     brand: Huawei
-    model: MatePad Pro
+    model: MatePad Pro 10.8" WiFi
   os_family: Android
   browser_family: Unknown
 -
@@ -5018,3 +5018,289 @@
     model: M12CG
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Lenovo TB-J706F) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.85 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 94.0.4606.85
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Lenovo
+    model: Tab P11 Pro
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; H1010) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.50 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 95.0.4638.50
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Proline
+    model: H1010
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; MONZA-T7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.50 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 95.0.4638.50
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Packard Bell
+    model: Monza T7
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Optima 8 Z801 4G TS8227PL) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.50 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 95.0.4638.50
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Digma
+    model: Optima 8 Z801 4G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Optima 7 Z800 4G TS7225PL) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4583.0 Mobile Safari/537.36 OPR/62.3.3146.57763
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Opera Mobile
+    version: 62.3.3146.57763
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Digma
+    model: Optima 7 Z800 4G
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Optima 7 A101 3G TT7223PG) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.114 Safari/537.36 OPR/64.2.3282.60128
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    version: 64.2.3282.60128
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Digma
+    model: Optima 7 A101 3G
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Optima 7 A100S 3G TS7222PG) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.50 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 95.0.4638.50
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Digma
+    model: Optima 7 A100S 3G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Optima 10 A501S 4G TS1221PL) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.85 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 94.0.4606.85
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Digma
+    model: Optima 10 A501S 4G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SEN_1055_ARM) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 81.0.4044.138
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Connex
+    model: Serenity 1055 10.1"
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; MRX-W19; HMSCore 5.3.0.312) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.1.310 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.1.310
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: MatePad Pro 10.8" WiFi
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; MRX-W39; HMSCore 6.0.1.306) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.3.300 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.3.300
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: MatePad Pro 10.8" WiFi
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; HarmonyOS; MRX-AL19; HMSCore 6.0.0.306) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.2.301 Safari/537.36
+  os:
+    name: HarmonyOS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.2.301
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: MatePad Pro 10.8"
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; HarmonyOS; MRX-AN19; HMSCore 6.1.0.306) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.4.301 Mobile Safari/537.36
+  os:
+    name: HarmonyOS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.4.301
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: MatePad Pro 10.8" 5G
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; HarmonyOS; MRR-W29; HMSCore 6.0.1.306) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.4.301 Safari/537.36
+  os:
+    name: HarmonyOS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.4.301
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: MatePad Pro 10.8" (2021) WiFi
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; WGR-W09 Build/XXXXX; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/83.0.4103.106 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 83.0.4103.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Huawei
+    model: MatePad Pro 12.6" WiFi
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; WGR-W19 Build/XXXXX; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/76.0.3809.89 Safari/537.36 T7/12.19.0.0 SP-engine/2.33.0 baiduboxapp/12.19.0.11 (Baidu; P1 10) NABar/1.0
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: Baidu Box App
+    version: 12.19.0.11
+  device:
+    type: tablet
+    brand: Huawei
+    model: MatePad Pro 12.6" WiFi
+  os_family: Android
+  browser_family: Unknown
